@@ -343,10 +343,10 @@ package or when debugging this package.\
 #
 # Note: Used iff _use_internal_dependency_generator is non-zero. The
 # helpers are also used by @RPMCONFIGDIR@/rpmdeps {--provides|--requires).
-#%__perl_provides	/usr/lib/rpm/perldeps --provides
-#%__perl_requires	/usr/lib/rpm/perldeps --requires
-%__perl_provides	@RPMCONFIGDIR@/perl.prov
-%__perl_requires	@RPMCONFIGDIR@/perl.req
+%__perl_provides	/usr/lib/rpm/perldeps --provides
+%__perl_requires	/usr/lib/rpm/perldeps --requires
+#%__perl_provides	@RPMCONFIGDIR@/perl.prov
+#%__perl_requires	@RPMCONFIGDIR@/perl.req
 
 #
 # fixowner, fixgroup, and fixperms are run at the end of hardcoded setup
