@@ -16,6 +16,8 @@
 	- merge sensible parts of openpkg rpm.patch.bugfix (#104780).
 	- mark _javadocdir as documentation (#102898).
 	- flush pipe before exit 1 in check-files (#103867).
+	- perl.req: avoid regex misfire on '^use' in "= <<" assign (#109934).
+	- use perldeps {--provides|--requires}.
 
 4.2 -> 4.2.1:
 	- fix: nested %if handling, optind initialization posix vs. glibc.
